# swagger2openapi

./: CHANGELOG.md  Cargo.toml  README.md
src/: clone.rs  common.rs  convert.rs  corpus_tests.rs  error.rs  fixup.rs  jptr.rs  lib.rs  options.rs  recurse.rs  resolver.rs  schema_walker.rs  status_codes.rs  yaml.rs
tests/: behavior.rs  conversion.rs  conversions.rs  primitives.rs
