[package]
name = "swagger2openapi"
version = "0.1.0"
edition = "2021"
description = "Convert Swagger 2.0 API specs to OpenAPI 3.0.x"
license = "BSD-3-Clause"
repository = "https://github.com/hey-jj/swagger2openapi"
readme = "README.md"
keywords = ["swagger", "openapi", "oas", "convert", "spec"]
categories = ["api-bindings", "encoding", "parsing"]

[features]
default = ["yaml"]
# YAML parse and serialize for the string, file, and stream entry points.
yaml = ["dep:serde_yaml"]
# External and internal $ref resolution plus the URL entry point.
resolve = ["dep:reqwest", "dep:tokio"]
# Marker feature for the hermetic conversion core targeting wasm32.
wasm = []

[dependencies]
# preserve_order keeps map insertion order, which the converter and the
# $ref relocation paths depend on.
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = { version = "0.9", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", optional = true, features = ["rt", "macros"] }

[dev-dependencies]
libtest-mimic = "0.8"
