[package]
name = "swagger2openapi"
version = "0.1.0"
edition = "2021"
description = "Convert Swagger 2.0 API specs to OpenAPI 3.0.x"
license = "BSD-3-Clause"
repository = "https://github.com/hey-jj/swagger2openapi"
readme = "README.md"
keywords = ["swagger", "openapi", "oas", "convert", "spec"]
categories = ["api-bindings", "encoding", "parsing"]

[dependencies]
# preserve_order keeps map insertion order, which the converter and the
# $ref relocation paths depend on.
serde_json = { version = "1", features = ["preserve_order"] }
# YAML parse and serialize for the string, file, and stream entry points and for
# reading external $ref targets during resolution.
serde_yaml = "0.9"
